--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </header>
 
   <main class="jr w60 m-auto">
+		<p>A lightweight responsive css framework</p>
     <h2>How to use it?</h2>
     <p><strong>CDN:</strong> https://cdn.jsdelivr.net/gh/lufemas/jr-css/jr.css/jr-min.css</p>
     <p><strong>Download:</strong> <a class="jr button link-raw" target="_blank" href="./jr.css/jr.css"> JR.css</a> <a class="jr button link-raw" target="_blank" href="./jr.css/jr-min.css"> JR.css minified</a> <a class="jr button link-raw" target="_blank" href="./jr.css/jr.scss"> JR.css Source (Sass)</a></p>
